test/e2e/testdata/xlistenerset-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xlistener-httpsroute
  namespace: gateway-conformance-infra
spec:
  hostnames:
  - www.example.com
  parentRefs:
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    namespace: gateway-conformance-infra
    name: xlistener-set-http
    sectionName: extra-https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /xlistener-https
    backendRefs:
    - name: infra-backend-v1
      port: 8080
